# capra_roboguard

./: README.md
rove_sensor_api/: Cargo.toml  README.md
rove_sensor_api/.claude/: settings.local.json
rove_sensor_api/config/: kinova.toml  robotiq.toml  server.toml  vectornav.toml
rove_sensor_api/doc/: rove_sensor_api.json
rove_sensor_api/logs/2026-05-03/07/: inputs.csv  kinova_arm.csv  odrive_31.csv  odrive_32.csv  odrive_33.csv  odrive_34.csv  robotiq_gripper.csv  vectornav_ttyUSB_VN300.csv
rove_sensor_api/logs/2026-05-03/18/: kinova_arm.csv  odrive_31.csv  odrive_32.csv  odrive_33.csv  odrive_34.csv  robotiq_gripper.csv  vectornav_ttyUSB_VN300.csv
rove_sensor_api/logs/2026-05-03/19/: inputs.csv  kinova_arm.csv  odrive_31.csv  odrive_32.csv  odrive_33.csv  odrive_34.csv  robotiq_gripper.csv
rove_sensor_api/logs/2026-05-03/20/: inputs.csv  kinova_arm.csv  odrive_31.csv  odrive_32.csv  odrive_33.csv  odrive_34.csv  robotiq_gripper.csv
rove_sensor_api/logs/2026-05-03/21/: inputs.csv  kinova_arm.csv  odrive_31.csv  odrive_32.csv  odrive_33.csv  odrive_34.csv  (+1 more)
rove_sensor_api/scripts/: install_service.sh  rove-sensor-api.service  uninstall_service.sh
rove_sensor_api/src/: lib.rs  main.rs
rove_sensor_api/src/core/: config.rs  driver.rs  error.rs  mod.rs  registry.rs  server_config.rs
rove_sensor_api/src/drivers/: mod.rs
rove_sensor_api/src/http/: routes.rs
rove_sensor_api/src/logging/: mod.rs
rove_sensor_api/src/protocol/: packet.rs
rove_sensor_api/src/udp/: server.rs
rove_sensor_api/tools/: kinova_test.py  odrive_test.py  sensor_dashboard.py
(+182 files in other folders)
